matchbox/src/snapshots/matchbox__test__other-2.snap
---
source: src/test.rs
expression: "snapshot! { match () { x => () } }"
---
fn main() {
    match () {
        x => {}
    }
}
