matchbox/src/snapshots/matchbox__test__other-3.snap
---
source: src/test.rs
expression: "snapshot! { match () { derefref!(derefref!(x)) => () } }"
---
fn main() {
    match () {
        a0 if {
            #[allow(unused_variables)] if let derefref!(x) = &**a0 { true } else { false }
        } => {
            if let derefref!(x) = &**a0 {
                ()
            } else {
                panic!(
                    "Two invocations of Deref::deref returned different outputs on same inputs",
                )
            }
        }
    }
}
