matchbox/src/snapshots/matchbox__test__other-4.snap
---
source: src/test.rs
expression: "snapshot! { match &Rc::new(Nil) { derefref!(_) => a0, _ => panic!() } }"
---
fn main() {
    match &Rc::new(Nil) {
        a0 if { #[allow(unused_variables)] if let _ = &**a0 { true } else { false } } => {
            if let _ = &**a0 {
                a0
            } else {
                panic!(
                    "Two invocations of Deref::deref returned different outputs on same inputs",
                )
            }
        }
        _ => panic!(),
    }
}
