matchbox/src/snapshots/matchbox__test__spelling-2.snap
---
source: src/test.rs
expression: "snapshot! { match () { dereff!(x) => () } }"
---
fn main() {
    match () {
        dereff!(x) => {}
    }
}
